style.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
input,
button,
textarea,
select {
  font: inherit;
}
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
#root,
#__next {
  isolation: isolate;
}

/*My css*/
:root {
  --black: #342e37;
  --white: #fafffd;
  --blue: #3c91e6;
  --green: #a2d729;
  --orange: #fa824c;
  --border-radius: 20px;
  font-family: K2D, arial;
  font-size: 20px;
}

body {
  display: grid;
  grid-template-rows: 100vh;
  grid-template-columns: 30vw 70vw;
}

aside {
  background-color: var(--blue);
  display: grid;
  grid-template-rows: 20% 20% 20%;
  align-content: center;
  align-items: center;
}

#title {
  justify-self: center;
  font-size: 2.5rem;
  font-weight: 600;
}

aside > button {
  justify-self: center;
  width: 70%;
  height: 50%;
  border: none;
  border-radius: var(--border-radius);
  font-size: 1.3rem;
  cursor: pointer;
  transition: background-color 0.3s ease, transform 0.2s ease;
}

aside > button:hover {
  background-color: var(--green);
  transform: scale(1.05);
}

dialog {
  height: fit-content;
  width: min-content;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 30px;
  background-color: var(--white);
  border-radius: var(--border-radius);
}

form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  font-size: 1.1rem;
}

#form-title {
  font-size: 1.5rem;
}

input[type="text"],
input[type="number"],
textarea {
  border-radius: 8px;
  border-width: 2px;
}

.form-label {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

input[type="checkbox"] {
  cursor: pointer;
  width: 20px;
  height: 20px;
  accent-color: var(--green);
}

form > button {
  cursor: pointer;
  transition: background-color 0.3s ease, transform 0.2s ease;
}

#submit:hover {
  background-color: var(--green);
  transform: scale(1.05);
}

#cancel:hover {
  background-color: rgb(255, 89, 89);
  transform: scale(1.05);
}

main {
  background-color: var(--black);
}

#main-container {
  display: grid;
  height: 100%;
  width: 100%;
  grid-template-rows: repeat(3, 1fr);
  grid-template-columns: repeat(3, 1fr);
  align-items: center;
  justify-items: center;
}

.book-card {
  width: 80%;
  height: 80%;
  background-color: var(--white);
  border-radius: 20px;
  padding: 5%;
}

.book-card > div {
  font-weight: 900;
}

